--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/videos/index.html.erb</p>
 
 <ul>
-<%= @videos.each do |video| %>
+<% @videos.each do |video| %>
   <li><a href="/videos/<%= video.id %>"><%= video.name %></a></li>
 <% end %>
 </ul>
