--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,5 +1,13 @@
 <h1><%= @video.name %></h1>
 
+<% if session[:user_id] != nil %>
+  <% if Like.where(:user_id => session[:user_id], :reference => @video.id).count == 0 %>
+    <%= button_to "Like", '/likes', params: {like_on: :video, id: @video.id}, method: :post %>
+  <% else %>
+    <%= button_to "Dislike", '/dislikes', params: {like_on: :video, id: @video.id}, method: :post %>
+  <% end %>
+<% end %>
+
 <h3>Comments</h3><br>
 
 <%= link_to "Add a comment", request.fullpath + '/comment' %>
