--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,19 +1,82 @@
-<h1><%= @video.name %></h1>
+<div class="columns is-centered">
+  <div class="column is-8">
+    <br>
+    <div class="columns is-multiline is-gapless">
+      <div class="column is-full mb-3"><p class="title is-2"><%= @video.name %></p></div>
+      <div class="column is-three-quarters"><p class="subtitle is-5"><%= @video.user.name %></p></div>
+      <div class="column is-one-quarter">
+        <% like_count = Like.where(:reference => @video.id, :like_on => :video).count %>
+        <% if Like.where(:user_id => session[:user_id], :reference => @video.id, :like_on => :video).count == 0 %>
+          <%= link_to likes_path(:like_on => :video, :reference => @video.id, :video_id => @video.id), method: :post do%>
+            <h1 class="subtitle is-5" style="text-align: right; color: #EB4034">
+              <i class="far fa-heart mr-1"></i><%= like_count %>
+            </h1>
+          <% end %>
+        <% else %>
+          <%= link_to dislikes_path(:like_on => :video, :reference => @video.id, :video_id => @video.id), method: :post do%>
+            <h1 class="subtitle is-5" style="text-align: right; color: #EB4034">
+              <i class="fas fa-heart mr-1"></i><%= like_count %>
+            </h1>
+          <% end %>
+        <% end %>
+        <%# if session[:user_id] != nil %>
 
-<% if session[:user_id] != nil %>
-  <% if Like.where(:user_id => session[:user_id], :reference => @video.id).count == 0 %>
-    <%= button_to "Like", '/likes', params: {like_on: :video, id: @video.id}, method: :post %>
-  <% else %>
-    <%= button_to "Dislike", '/dislikes', params: {like_on: :video, id: @video.id}, method: :post %>
+        <%# end %>
+      </div>
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <h3 class="title is-4">Comments</h3>
+    <%= form_tag '/comments', method: :post do %>
+      <%= hidden_field_tag 'video_id', @video.id %>
+      <%= text_area_tag :body, "", rows: 3, class: 'textarea is-small ml-2 mr-2 mb-2'%>
+      <%= submit_tag "Post Comment", class: "button is-primary ml-2 mr-2 mb-4" %>
+    <% end %>
+    <br>
+    <% @comments.each do |comment| %>
+      <article class="media">
+        <figure class="media-left">
+          <p class="image is-64x64">
+            <img src="https://bulma.io/images/placeholders/128x128.png" alt="Placeholder Image">
+          </p>
+        </figure>
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <strong><%= comment.user.name %></strong>
+              <br>
+              <%= comment.body %>
+            </p>
+          </div>
+          <nav class="level is-mobile">
+            <div class="level-left">
+              <div class="level-item">
+                <% like_count = Like.where(:reference => comment.id, :like_on => :comment).count %>
+                <% if Like.where(:user_id => session[:user_id], :reference => comment.id).count == 0 %>
+                  <%= link_to likes_path(:like_on => :comment, :reference => comment.id, :video_id => @video.id), method: :post do%>
+                    <p style="text-align: right; color: #EB4034">
+                      <i class="icon is-small far fa-heart mr-1"></i><%= like_count %>
+                    </p>
+                  <% end %>
+                <% else %>
+                  <%= link_to dislikes_path(:like_on => :comment, :reference => comment.id, :video_id => @video.id), method: :post do%>
+                    <p style="text-align: right; color: #EB4034">
+                      <i class="icon is-small fas fa-heart mr-1"></i><%= like_count %>
+                    </p>
+                  <% end %>
+                <% end %>
+              </div>
+<!--              <a class="level-item">-->
+<!--                <span class="icon is-small" style="color: #EB4034"><i class="fas fa-heart"></i></span>-->
+<!--              </a>-->
+<!--              <a class="level-item">-->
+<!--                <span class="icon is-small"><i class="fas fa-reply"></i></span>-->
+<!--              </a>-->
+            </div>
+          </nav>
+        </div>
+      </article>
   <% end %>
-<% end %>
-
-<h3>Comments</h3><br>
-
-<%= link_to "Add a comment", request.fullpath + '/comment' %>
-
-<ul>
-  <% @comments.each do |comment| %>
-    <li><%= comment.user.name + ": " + comment.body %></li>
-  <% end %>
-</ul>
+  </div>
+</div>
