--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-16by9">
-                  <img src="https://bulma.io/images/placeholders/640x360.png" alt="Placeholder image">
+                  <img src="<%= video.thumbnail_url %>" alt="Placeholder image">
                 </figure>
               </div>
               <div class="card-content">
