--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -9,7 +9,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-16by9">
-                  <img src="https://youtube-clone-bucket-processed.s3.ap-south-1.amazonaws.com/testvid/thumb.png" alt="Placeholder image">
+                  <img src="<%= video.thumbnail_url %>" alt="Placeholder image">
                 </figure>
               </div>
               <div class="card-content">
