--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     var video = document.getElementById("video");
-    var videoSrcHls = "<%= @test_url %>";
+    var videoSrcHls = "<%= @video.playlist_url %>";
 
     if(Hls.isSupported()) {
         var config = {
