--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,19 +1,3 @@
-<script type="text/javascript">
-    var video = document.getElementById("video");
-    var videoSrcHls = "<%= @video.playlist_url %>";
-
-    if(Hls.isSupported()) {
-        var config = {
-            capLevelToPlayerSize: true,
-        }
-        var hls = new Hls(config);
-        hls.loadSource(videoSrcHls);
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED,function() {
-            video.play();
-        });
-    }
-</script>
 <div class="columns is-centered">
   <div class="column is-8">
     <br>
@@ -41,7 +25,27 @@
       </div>
     </div>
 
-    <video id="video" width="100%" height="auto" controls></video>
+<!--    <video id="video" width="100%" height="auto" controls></video>-->
+    <video
+      id="video_player"
+      class="video-js vjs-16-9"
+      controls
+      preload="auto"
+      width="100%"
+      height="auto"
+      poster="<%= @video.thumbnail_url %>"
+      data-setup="{}"
+    >
+      <source src="<%= @video.playlist_url %>" type="application/x-mpegURL"/>
+      <p class="vjs-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a
+        web browser that
+        <a href="https://videojs.com/html5-video-support/" target="_blank"
+        >supports HTML5 video</a
+        >
+      </p>
+    </video>
+
 
     <h3 class="title is-4 mt-3">Comments</h3>
     <%= form_tag '/comments', method: :post do %>
