--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%#= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" %>
+    <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" %>
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'video_js', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-<!--    <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>-->
   </head>
 
   <body>
     <nav class="navbar has-shadow is-fixed-top" role="navigation" aria-label="main navigation" style="background-color: #EB4034">
     <div class="navbar-brand">
       <%= link_to '/', class: "navbar-item" do%>
-        <h1 class="title is-4 has-text-white">YouTube Clone</h1>
+        <h1 class="title is-4 has-text-white"><i class="fab fa-youtube mr-2"></i>YouTube Clone</h1>
       <% end %>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
