Added rufus-scheduler to dependencies, SQS message fetching works now

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <h1 class="title is-2"><%= @user.name %></h1>
     <h1 class="subtitle is-5">Videos</h1>
     <div class="columns is-multiline">
-      <% @user.videos.each do |video| %>
+      <% @videos.each do |video| %>
         <div class="column is-half">
           <a href="/videos/<%= video.id %>">
             <div class="card">
