--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -9,18 +9,18 @@
       <div class="ml-2 mb-2">
         <div class="file has-name">
           <label class="file-label">
-            <%= file_field_tag :file, class: "file-input", accept: 'video/mp4'%>
+            <%= file_field_tag :file, class: "file-input"%>
             <span class="file-cta">
-              <span class="file-icon">
-                <i class="far fa-file-video"></i>
-              </span>
-              <span class="file-label">
-                Video File
-              </span>
-            </span>
+      <span class="file-icon">
+        <i class="far fa-file-video"></i>
+      </span>
+      <span class="file-label">
+        Video File
+      </span>
+    </span>
             <span class="file-name">
-              No File Selected
-            </span>
+      No File Selected
+    </span>
           </label>
         </div>
       </div>
