--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
               </div>
               <% if session[:user_id] == @user.id %>
                 <footer class="card-footer">
-                  <a href="#" class="card-footer-item">Download</a>
+                  <%= link_to "Download", "/users/download/#{video.id}", class: "card-footer-item", method: :post, target: "_blank" %>
 <!--                  <a href="#" class="card-footer-item" style="color: #EB4034">Delete</a>-->
                   <%= link_to "Delete", videos_delete_path(:id => video.id), class: "card-footer-item", style: "color: #EB4034", method: :post %>
                 </footer>
